[project]
name = "trabalhos-do-curso"
version = "0.1.0"
description = ""
authors = [
    {name = "Brendo H L Souza",email = "brendohenriquelopes@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.139.2,<0.140.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
